--- a/extracopy-to-delete.html
+++ b/extracopy-to-delete.html
@@ -37,7 +37,7 @@
   </button>
 
 				<div class="collapse navbar-collapse fixed top" id="navbarText">
-					<ul class="navbar-nav mr-auto">
+					<ul class="navbar-nav mr-auto text-center">
 						<li class="nav-item active">
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
@@ -48,7 +48,7 @@
 							<a class="nav-link" href="pricing.html">Pricing</a>
 						</li>
 						<li class="navbar-item">
-							<a class="nav-link" href="legislation.html"> Serious stuff</a>
+							<a class="nav-link" href="extracopy-to-delete.html"> Serious stuff</a>
 						</li>
 						<!-- ------tag navbar-link to connect the sign up form -->
 						<li class="navbar-item">
@@ -101,8 +101,8 @@
 	</div>
 	<!-- End of Modal Sign up form from Toggle bar -->
 
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <!-- ---------------------------------------Carousel images -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 	<ol class="carousel-indicators">
 		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -124,7 +124,7 @@
             </div>
 
 		<div class="carousel-item">
-			<img src="images/blonde-jpg.jpg" class="d-block w-100" alt="Trainer">
+			<img src="images/palestra.jpg" class="d-block w-100" alt="Trainer">
     </div>
 			<div class="carousel-item">
 				<img src="images/dog.jpg" class="d-block w-100" alt="Dogs">
@@ -141,11 +141,7 @@
 				<span class="carousel-control-next-icon" aria-hidden="true"></span>
 				<span class="sr-only">Next</span>
 			</a>
-		</div>
-
-
-
-
+	</div>
 
 		<div class="col-sm-12">
 			<div class="jumbotron fluid no-gutters">
@@ -195,7 +191,15 @@
 
 							Use our Smart Start programme to kickstart your fitness journey. Let's go...</p>
 						<img src="images/palestra.jpg" class="img-thumbnail" style="height:auto;width:auto">
+
+
+ <!-- -------------------------Video --------------------------------> 
 				</div>
+                <video controls>
+                <source src="videos/IMG_4431.mp4" type="video/mp4">
+                </video>
+
+<!-- -------------------------------------------------------------- -->
 					
 						<div class="col-sm-6 col-lg-12">
 							<h2 class="display-6">What makes our gym different
