add images/ new images added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="pricing.html">Pricing</a>
                 </li>
                 <li class="navbar-item">
-                    <a class="nav-link" href="legislation.html"> Serious stuff</a>
+                    <a class="nav-link" href="extracopy-to-delete.html"> Serious stuff</a>
                 </li>
                 <!-- ------tag navbar-link to connect the sign up form -->
                 <li class="navbar-item">
